--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.com">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Lista de Estudiantes</title>
@@ -30,6 +30,7 @@
                 </tr>
             </tbody>
         </table>
+      <img th:src="@{/img/img1.png}" alt="" width="1080" height="452">
         <footer th:include="~{../static/html/footer.html}"></footer>
     </section>
 </body>
